crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_doctype_lowercase_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..16
  PARAGRAPH@0..16
    TEXT@0..15 "<!doctype html>"
    NEWLINE@15..16 "\n"
