crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_multiline_embed_open_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..18
  PARAGRAPH@0..18
    INLINE_HTML@0..17
      INLINE_HTML_CONTENT@0..17 "<embed\n  src=\"x\">"
    NEWLINE@17..18 "\n"
